[metadata]
name = plover_one_handed
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev8
packages =
	plover_one_handed

[options.entry_points]
plover.system =
  One-Handed Stenotype = plover_one_handed.system
plover.extension =
  one_handed = plover_one_handed.extension:OneHandedLayout
